# 4sb

./: ARCHITECTURE.md
bridge/: CMakeLists.txt  Dockerfile
bridge/src/: main.cpp
docs/: JOHNNY-HANDOFF.md
infra/scripts/: create-vm-template.sh  deploy.sh  pool-manager.sh  setup-project.sh
infra/templates/: startup-script.sh
